--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-      <h1 id="test">Hello World</h1>
+      <h1 class="test">Hello World</h1>
     </div>
   </body>
 </html>
