add apiCall.js getLikes.js render.js update.js update webpack

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     </div>
   </header>
   <main class="home-page">
-    <div class="moviecards-container"></div>
+    <div class="moviecards-container" id="movie-card"></div>
   </main>
   <footer>
     Created by Temesgen G/gorgis & Nicholas Mutale Under MIT License
