fix linter error

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <h1 class="movieTitle">MOVIESPACE</h1>
         <div id="counter">
             <h2>Movies</h2>
-            <span id="counter"></span>
+            <span id="countMovies"></span>
         </div>
       </div>
   </header>
