Change footer & tab name

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
-    <title>JS-Capstone</title>
+    <title>MovieSpace</title>
 </head>
 <body>
   <header>
@@ -27,7 +27,7 @@
     <div class="moviecards-container" id="movie-card"></div>
   </main>
   <footer>
-    Created by Temesgen G/gorgis & Nicholas Mutale Under MIT License
+    Created by Nati Gebregorgis & Nicholas Mutale Under MIT License
   </footer>
 </body>
 </html>
