--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
-    <title>JS-Capstone</title>
+    <title>MovieSpace</title>
 <script defer src="main.js"></script></head>
 <body>
   <header>
@@ -26,7 +26,7 @@
     <div class="moviecards-container" id="movie-card"></div>
   </main>
   <footer>
-    Created by Temesgen G/gorgis & Nicholas Mutale Under MIT License
+    Created by Nati Gebregorgis & Nicholas Mutale Under MIT License
   </footer>
 </body>
 </html>
